fix(styles): removed height rule that caused an overflow

--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -8,7 +8,6 @@
 
 
 html, body, #root, .App {
-  height: 100%;
   margin: 0;
 }
 
